# finball

./: .Makefile.swp  .clang-format  .gitattributes  .gitignore  Makefile  README.md  benchmark.py  benchmark.txt  clang-format-diff.sh  log.make  run_valgrind
LevelCreator/: LevelCreator.py
bullet3/: 0_Bullet3Demo.txt  build_cmake_pybullet_double.sh
bullet3/examples/: CMakeLists.txt
bullet3/examples/FaExample/: CMakeLists.txt  FaExample.cpp  FaExample.h  main.cpp
data/: finball.desktop  testLevel.txt  testLevel2.txt
doc/: .gitignore  Makefile  group_1_input_devices.tex  kinect.txt  project.aux  project.out  project.tex  project.tex~  render-images-code-example.txt
doc/figures/: uml.xoj
lib/freetype-gl/: Makefile
resources/sharks/: fin.psd  whole_shark.psd
scripts/: clang-format-diff
sources-for-kinect/: 01_git-core_1%3a2.1.4-2.1_all.deb  02_cmake_3.0.2-1ubuntu2_amd64.deb  03_freeglut3-dev_2.8.1-2_amd64.deb  04_pkg-config_0.28-1ubuntu1_amd64.deb  05_build-essential_11.6ubuntu6_amd64.deb  06_libxmu-dev_2%3a1.1.2-1_amd64.deb  07_libxi-dev_2%3a1.7.4-1_amd64.deb  08_libusb-1.0-0-dev_2%3a1.0.19-1_amd64.deb  09_doxygen_1.8.9.1-2_amd64.deb  10_graphviz_2.38.0-7build1_amd64.deb  11_mono-complete_3.2.8+dfsg-4ubuntu4_amd64.deb  README  install.sh  nite-bin-linux-x64-v1.5.2.21.tar.bz2
sources-for-wiimote/: 1_gcc_4%3a4.9.2-2ubuntu2_amd64.deb  2_g++_4%3a4.9.2-2ubuntu2_amd64.deb  4_bluetooth_4.101-0ubuntu25_all.deb  5_bluez-utils_4.101-0ubuntu25_all.deb  6_libbluetooth-dev_4.101-0ubuntu25_amd64.deb  7_libopenobex1_1.5-2.1_amd64.deb  README  install.sh
src/: Array2D.hpp  CDataArray2D.hpp  CDataDrawingInformation.hpp  CDataRigidBody.hpp  CGlTexture.hpp  CParameters.hpp  CPipelinePacket.hpp  CPipelinePacketRbLbm.hpp  CPipelineStage.hpp  CSDLInterface.hpp  CStage_FluidSimulationLBM.hpp  CStage_ImageInput.hpp  CStage_ImageProcessing.hpp  CStage_RigidBodySimulation.hpp  CStage_VideoInput.hpp  CStage_VideoOutput.hpp  Color.hpp  DoubleBuffer.hpp  FICell.hpp  GameController.cpp  GameController.hpp  GameLogic.hpp  GameLogicData.hpp  GameLogicInput.hpp  GameLogicOutput.hpp  GameOverScreen.hpp  Highscores.hpp  LatticeBoltzmann.hpp  LatticeBoltzmannData.hpp  LatticeBoltzmannInput.hpp  LatticeBoltzmannOutput.hpp  Level.cpp  Level.hpp  LevelLoader.hpp  Log.cpp  Log.hpp  MainMenu.cpp  MainMenu.hpp  MusicPlayer.hpp  Parameters.hpp  (+18 more)
src/GameLogic/: GameLogic.cpp  GameLogic.hpp  GameLogicInput.hpp  GameLogicOutput.hpp
src/LatticeBoltzmann/: .LatticeBoltzmann.cpp.swp  FICell.hpp  LatticeBoltzmann.cpp  LatticeBoltzmann.hpp  LatticeBoltzmannInput.hpp  LatticeBoltzmannOutput.hpp
src/LevelDesign/: ASCIIArtLevelParser.hpp  (+6 more)
talksAndHandouts/: 2a-presentation_topic2a_wiiandkinect.odp  2b-Presentation Juliane Mayer.pptx  3b-OpenCV.pptx  4d-Ferienakademie. group 4d.pptx  5b-Threads in C++.pptx  6a-Impulse based rigid body simulations.pptx  7a-C_DEV-EmailVersion.pptx  8a-Serious GamesGamification_pres_withoutvideos.pptx  8a_Serious GamesGamification_pres.pptx  sdl_imgLoad.cpp  sdl_mouseInput.cpp
test/: level5x5.txt  test_all.cpp  test_flagfield.cpp  test_lbm.cpp  test_lbm.hpp  test_test.cpp
(+93 files in other folders)
